02_deployments/07_preexisting_lb/00_test_code/01_app_deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: host-test

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: host-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: hashicorp/http-echo
        args: ["-text=Hello from App1"]
        ports:
        - containerPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: host-test
spec:
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 5678

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: host-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: hashicorp/http-echo
        args: ["-text=Hello from App2"]
        ports:
        - containerPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: app2
  namespace: host-test
spec:
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 5678
