02_deployments/07_preexisting_lb/00_test_code/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-echo
spec:
  selector:
    app: http-echo
  ports:
    - port: 80
      targetPort: 5678
